# UMUQ

./: .gitignore  .gitmodules  .travis.yml  COPYING.README  LICENSE.README  Makefile.am  Makefile.in  NOTICE  README.md  aclocal.m4  autogen.sh  configure  configure.ac  polynomial.cpp  polynomial.h
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
docs/: DCPSE.dox  Doxyfile.in  Mainpage.dox  Makefile.am  Makefile.in  Manual.dox  UMUQ.Doxyfile
docs/html/: DCPSE_8dox.html  Mainpage_8dox.html  annotated.html  annotated_dup.js  arraywrapper_8hpp_source.html  arraywrapper__test_8cpp_source.html  bfgs2_8hpp_source.html  bfgs2__test_8cpp_source.html  bfgs_8hpp_source.html  bfgs__test_8cpp_source.html  chebyshevpolynomial_8hpp_source.html  chebyshevpolynomial__test_8cpp_source.html  classackley-members.html  classackley.html  classackley.js  classbaseA-members.html  classbaseA.html  classbaseA.js  classbaseA__inherit__graph.map  classbaseA__inherit__graph.md5  classcubic__spline-members.html  classcubic__spline.html  classcubic__spline.js  classcubic__spline__coll__graph.md5  classcubic__spline__inherit__graph.map  classdriveA-members.html  classdriveA.html  classdriveA.js  classdriveA__coll__graph.map  classdriveA__inherit__graph.md5  classes.html  classmeta__sqrt-members.html  classmeta__sqrt.html  classmeta__sqrt.js  classmeta__sqrt_3_01Y_00_01InfX_00_01SupX_00_01true_01_4-members.html  classmeta__sqrt_3_01Y_00_01InfX_00_01SupX_00_01true_01_4.html  classmeta__sqrt_3_01Y_00_01InfX_00_01SupX_00_01true_01_4.js  classnormalizedgaussian-members.html  classnormalizedgaussian.html  classnormalizedgaussian.js  (+1189 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+133 more)
examples/: speciesname.hpp
include/: UMUQ_config.h.in
include/io/: io.h
m4/: README.md  m4_ax_arch.m4  m4_ax_blas.m4  m4_ax_cxx_compile_stdcxx.m4  m4_ax_debug.m4  m4_ax_doxygen.m4  m4_ax_eigen.m4  m4_ax_flann.m4  m4_ax_googletest.m4  m4_ax_lapack.m4  m4_ax_mpi.m4  m4_ax_prog.m4  m4_ax_pthread.m4  m4_ax_python.m4  m4_ax_torc.m4
scripts/: bootstrap.sh  build-autotools.sh  build-linux-autotools.sh  build-osx-autotools.sh  env-linux.sh  env-osx.sh  env.sh  install-linux-clang.sh  install-linux-gcc.sh  install-linux.sh  install-osx-gcc.sh  install-osx-gcc6.sh  install-osx.sh  log-config.sh
src/: Makefile.am  Makefile.in  eigen.hpp  eigenmatrix.hpp  environment.hpp  flann.hpp  flannlib.hpp  global.hpp  main.cpp  polynomial.cpp  polynomial.h  polynomial.hpp  umhbm_config.h.in
src/core/: constants.hpp  core.hpp  datatype.hpp  digits10.hpp  environment.hpp  macros.hpp  meta.hpp
src/data/: basic.hpp  current.hpp  database.hpp  datatype.hpp  eigendatatype.hpp  mpidatatype.hpp  npydatatype.hpp  runinfo.hpp  stdata.hpp  tmcmc.hpp
src/data_type/: TMCMC.hpp  TMCMC_datatype.hpp
src/datatype/: differentiablefunctionminimizertype.hpp  distancetype.hpp  eigendatatype.hpp  errorfitnesstype.hpp  errortype.hpp  functionminimizertype.hpp  (+7 more)
tests/: Makefile.am  Makefile.in  README.md  TMCMC_datatype_test.cpp  array_test.cpp  io_test.cpp  parser_test.cpp  polynomial_test.cpp  spawner_test.cpp  test.txt  utility_test.cpp
tests/.deps/: polynomial_test.Po
tests/core/: datatype_test.cpp
tests/data/: database_test.cpp  datatype_test.cpp  runinfo_test.cpp  stdata_test.cpp  test.txt
tests/data_type/: TMCMC_datatype_test.cpp
tests/examples/: species_test.cpp
tests/inference/: Makefile.am  Makefile.in
tests/inference/prior/: priordistribution_test.cpp
tests/inference/tmcmc/: database_test.cpp  datatype_test.cpp  runinfo_test.cpp  stdata_test.cpp  tmcmc_test.cpp
tests/interface/: AlDimer_bondlength4d0  AlDimer_bondlength4d1  AlDimer_bondlength4d2  Makefile.am  Makefile.in  dftfe_test.cpp  python_test.cpp
tests/io/: Makefile.am  Makefile.in  eigen_io_test.cpp  io_test.cpp  matplotlib_test.cpp  pyplot_test.cpp
tests/misc/: Makefile.am  Makefile.in  array_test.cpp  arraywrapper_test.cpp  funcallcounter_test.cpp  parser_test.cpp  timer_test.cpp  utility_test.cpp
tests/numerics/: Makefile.am  Makefile.in  dcpse_test.cpp  eigen_test.cpp  factorial_test.cpp  fitness_test.cpp  flannlib_test.cpp  knearestneighbors_test.cpp  knearestneighbors_test.txt  linearregression_test.cpp  multimin_test.cpp  polynomial_test.cpp  psrandom_test.cpp  stats_test.cpp
tests/numerics/dcpse/: 006.txt  012.txt  013.txt  Makefile.am  dcpse_test.cpp
tests/numerics/dcpse/data/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  007.txt  008.txt  009.txt  010.txt  011.txt
tests/numerics/density/: Makefile.am  densityfunction_test.cpp
tests/numerics/densityfunction/: densityfunction_test.cpp
tests/numerics/function/: Makefile.am  fitfunction_test.cpp  function_test.cpp  functionminimizer_test.cpp
tests/numerics/hypercube/: Makefile.am  hypercubesampling_test.cpp
tests/numerics/knn/: Makefile.am  knearestneighbors_test.cpp  vnearestneighbors_test.cpp
tests/numerics/multimin/: Makefile.am  Makefile.in  bfgs2_test.cpp  bfgs_test.cpp  conjugatefr_test.cpp  conjugatepr_test.cpp  multimin_test.cpp  simplexnm2_test.cpp  simplexnm2rnd_test.cpp  simplexnm_test.cpp  steepestdescent_test.cpp
tests/numerics/polynomials/: Makefile.am  chebyshevpolynomial_test.cpp  hermitepolynomial_test.cpp  legendrepolynomial_test.cpp  polynomial_test.cpp
tests/numerics/random/: Makefile.am  psrandom_test.cpp
tests/surrogate/: Makefile.am  Makefile.in  polynomialtail_test.cpp  radialbasisfunction_test.cpp  radialbasisfunctionkernel_test.cpp
tests/torc/: Makefile.am  Makefile.in  torc_test.cpp
tests/units/: Makefile.am  Makefile.in  lattice_test.cpp  species_test.cpp  units_test.cpp
(+156 files in other folders)
